--- a/web/manifest.json
+++ b/web/manifest.json
@@ -5,7 +5,7 @@
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "Erick Namukolo is a passionate Software Engineer & UI/UX Designer based in Lusaka, Zambia.",
+    "description": "ChunhThanhDe is a passionate Software Engineer & Flutter Developer based in HaNoi, VietNam.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
