--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,37 +29,31 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   material_design_icons_flutter: ^7.0.7296
   animated_text_kit: ^4.2.1
   url_launcher: ^6.0.12
   http: ^0.13.3
   cloud_firestore: ^4.3.1
+  firebase_core: ^2.25.4
   bot_toast: ^4.0.1
-  smooth_page_indicator: ^1.0.0+2
   avatar_glow: ^2.0.2
   url_strategy: ^0.2.0
   web_smooth_scroll: ^1.0.0
   loading_animation_widget: ^1.2.0+3
-  sizer: ^2.0.15
   blurrycontainer: ^1.0.2
   flutter_glow: ^0.3.0
-  platform_device_id_web: ^1.0.0
   time_machine: ^0.9.17
-  json_annotation: ^4.8.0
-
-  country_icons: ^2.0.0
   get: 4.6.6
   intl: ^0.18.1
-  flutter_localizations:
-    sdk: flutter
   slang: ^3.28.0
   slang_flutter: ^3.28.0
   firebase_app_check: ^0.2.1+12
-  g_recaptcha_v3: ^0.0.5
+  country_icons: ^3.0.0
 
 dev_dependencies:
   flutter_launcher_icons_maker: ^0.10.2
@@ -98,3 +92,4 @@ flutter:
     - family: Poppins
       fonts:
         - asset: assets/fonts/poppins/DesignerVN-Poppins-Regular.ttf
+        - asset: assets/fonts/poppins/DesignerVN-Poppins-ExtraBold.ttf
