--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   slang_flutter: ^3.28.0
   firebase_app_check: ^0.2.1+12
   country_icons: ^3.0.0
+  clipboard: ^0.1.3
 
 dev_dependencies:
   flutter_launcher_icons_maker: ^0.10.2
