--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   firebase_app_check: ^0.2.1+12
   country_icons: ^3.0.0
   clipboard: ^0.1.3
+  assets_audio_player: ^3.0.4+1
+  responsive_builder: ^0.4.2
 
 dev_dependencies:
   flutter_launcher_icons_maker: ^0.10.2
@@ -88,6 +90,7 @@ flutter:
 
   assets:
     - assets/
+    - assets/music/
 
   fonts:
     - family: Poppins
