--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dependencies:
   firebase_app_check: ^0.2.1+12
   country_icons: ^3.0.0
   clipboard: ^0.1.3
-  assets_audio_player: ^3.0.4+1
+  assets_audio_player: ^3.1.1
   responsive_builder: ^0.4.2
   g_recaptcha_v3: ^0.0.5
   platform_device_id: ^1.0.1
